[package]
name = "minecrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
bytemuck = { version = "1.9.1", features = ["derive"] }
winit = "0.26.1"
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
cgmath = "0.18"
cgmath-17 = { package = "cgmath", version = "0.17" }
image = { version = "0.24", default-features = false, features = ["png"] }
itertools = "0.5.9"
collision = "0.20.1"
bitmaps = "3.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.0"