[package]
name = "minecrust"
version = "0.1.0"
edition = "2021"

# [profile.release]
# debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
bytemuck = { version = "1.9.1", features = ["derive"] }
winit = "0.26.1"
wgpu = "0.13.1"
cgmath = "0.17"
image = { version = "0.24", default-features = false, features = ["png"] }
itertools = "0.5.9"
collision = "0.20.1"
bitmaps = "3.2.0"
noise = "0.7.0"
bmp = "0.5.0"
permutation = "0.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.0"
