[package]
name = "minecrust"
version = "0.1.0"
edition = "2021"

# [profile.release]
# debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
bytemuck = { version = "1.9.1", features = ["derive"] }
winit = "0.27"
wgpu = "0.14"
cgmath = "0.17"
image = { version = "0.24", default-features = false, features = ["png"] }
itertools = "0.5.9"
collision = "0.20.1"
bitmaps = "3.2.0"
noise = "0.7.0"
bmp = "0.5.0"
permutation = "0.4.0"
glam = "0.21.2"
rand = "0.8.5"
cfg-if = "1"
env_logger = "0.9"
log = "0.4"
palette = "0.5"
nalgebra = "0.31"
parry3d = "0.11"
game-loop = { version = "1.0.0", features = ["winit"] }
instant = "0.1.12"
handlebars = "4.5.0"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2", default-features = false, features = ["js"]}
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "TouchEvent",
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.0"